[package]
name = "actix-web-demo"
version = "0.1.0"
authors = ["Vladimir Nemergut <vladimir.nemergut@siemens-healthineers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
# The bytes crate provides an efficient byte buffer structure (Bytes) and traits for working with buffer implementations (Buf, BufMut).
bytes = "0.5.6"
# Diesel is an ORM and query builder designed to reduce the boilerplate for database interactions
diesel = { version = "1.4.5", features = ["postgres"] }
# This crate provides a configuration loader in the style of the ruby dotenv gem.
dotenv = "0.15.0"
# Serde is a framework for serializing and deserializing Rust data structures efficiently and generically.
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
# Rust port of extremely fast simdjson JSON parser with serde compatibility.
simd-json = "0.3.21"
simd-json-derive = "0.1.11"
